// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlighting a line range highlight-line highlights line 1`] = `
"<span class=\\"gatsby-highlight-code-line\\">  return \\"hello world\\"
</span>"
`;

exports[`highlighting a line range highlight-next-line highlights correct line 1`] = `
"<span class=\\"gatsby-highlight-code-line\\">  return \\"hello world\\"
</span>"
`;

exports[`highlighting a line range highlight-range does not highlight and warns if range is invalid 1`] = `""`;

exports[`highlighting a line range highlight-range highlights correct lines 1`] = `
"<span class=\\"gatsby-highlight-code-line\\">  a = 1 + 1
</span>
<span class=\\"gatsby-highlight-code-line\\">  b = 2 + 2
</span>
<span class=\\"gatsby-highlight-code-line\\">  return \\"hello world\\"
</span>"
`;

exports[`highlighting a line range highlight-range highlights until end of code block if ranges goes farther 1`] = `
"<span class=\\"gatsby-highlight-code-line\\">  a = 1 + 1
</span>
<span class=\\"gatsby-highlight-code-line\\">  b = 2 + 2
</span>
<span class=\\"gatsby-highlight-code-line\\">  return \\"hello world\\"
</span>
<span class=\\"gatsby-highlight-code-line\\">}
</span>
<span class=\\"gatsby-highlight-code-line\\">
</span>"
`;

exports[`highlighting a line range highlight-start / highlight-end highlights correct lines 1`] = `
"<span class=\\"gatsby-highlight-code-line\\">  var a = \\"b\\"
</span>
<span class=\\"gatsby-highlight-code-line\\">  return a + \\"hello world\\"
</span>"
`;

exports[`highlighting a line range highlight-start / highlight-end highlights without end directive 1`] = `
"<span class=\\"gatsby-highlight-code-line\\">var a = \\"b\\"
</span>
<span class=\\"gatsby-highlight-code-line\\">return a + \\"hello world\\"
</span>
<span class=\\"gatsby-highlight-code-line\\">
</span>"
`;

exports[`highlighting a line range jsx comment highlights comment line 1`] = `
"<span class=\\"gatsby-highlight-code-line\\">      <button>sup</button>
</span>"
`;

exports[`highlighting a line range jsx comment highlights comment line after Prism highlighting 1`] = `
"<span class=\\"gatsby-highlight-code-line\\">      <span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;</span>button</span><span class=\\"token punctuation\\">></span></span><span class=\\"token plain-text\\">sup</span><span class=\\"token tag\\"><span class=\\"token tag\\"><span class=\\"token punctuation\\">&lt;/</span>button</span><span class=\\"token punctuation\\">></span></span>
</span>"
`;

exports[`highlighting a line range kitchen sink highlights multiple directives 1`] = `
"<span class=\\"gatsby-highlight-code-line\\">import React, { Component } from \\"react\\"
</span>
<span class=\\"gatsby-highlight-code-line\\">  state = {
</span>
<span class=\\"gatsby-highlight-code-line\\">    count: 0,
</span>
<span class=\\"gatsby-highlight-code-line\\">  }
</span>
<span class=\\"gatsby-highlight-code-line\\">      count: state.count + 1,
</span>
<span class=\\"gatsby-highlight-code-line\\">  render() {
</span>
<span class=\\"gatsby-highlight-code-line\\">    const { count } = this.state
</span>
<span class=\\"gatsby-highlight-code-line\\">
</span>
<span class=\\"gatsby-highlight-code-line\\">        <button onClick={this.updateCount}>Click me</button>
</span>"
`;

exports[`highlighting a line range yaml highlights yaml 1`] = `
"<span class=\\"gatsby-highlight-code-line\\">- title: catorce
</span>"
`;
